--- a/src/components/layout/header/subheader/SubHeader.module.css
+++ b/src/components/layout/header/subheader/SubHeader.module.css
@@ -29,5 +29,5 @@
 }
 
 .h1 {
-  @apply lg:text-4xl md:text-3xl text-2xl font-bold tracking-tight text-gray-900 capitalize;
+  @apply lg:text-4xl text-3xl font-bold tracking-tight text-white capitalize;
 }
