--- a/src/components/card2/card2Component.module.css
+++ b/src/components/card2/card2Component.module.css
@@ -4,7 +4,7 @@
     0px 8px 15px rgba(0, 0, 0, 0.1),
     0 0 0 1px rgba(255, 255, 255, 0.1);
   transition: box-shadow 0.25s;
-  @apply bg-gray-900 cursor-pointer rounded-md relative pt-4 px-4 pb-4;
+  @apply bg-gray-100 border-2 cursor-pointer rounded-md relative;
 }
 .card::before {
   content: '';
@@ -21,7 +21,7 @@
 .h4 {
   z-index: 2;
   margin: 12px 0 4px 0;
-  @apply text-white text-lg leading-8 font-semibold relative capitalize;
+  @apply text-green-400 text-lg leading-8 font-semibold relative capitalize;
 }
 
 .shine {
