--- a/src/app/books/style.scss
+++ b/src/app/books/style.scss
@@ -5,7 +5,7 @@
         @apply lg:col-span-8;
 
         p {
-            @apply py-2 text-lg text-justify font-normal;
+            @apply py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
         }
 
         h2 {
@@ -20,7 +20,7 @@
             @apply list-inside list-decimal;
 
             li {
-                @apply my-2 text-base;
+                @apply my-2 py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
 
                 a {
                     @apply underline text-green-600 hover:transition-all hover:no-underline;
