--- a/src/components/card2/card2Component.module.css
+++ b/src/components/card2/card2Component.module.css
@@ -21,7 +21,7 @@
 .h4 {
   z-index: 2;
   margin: 12px 0 4px 0;
-  @apply text-green-400 text-lg leading-8 font-semibold relative capitalize;
+  @apply text-lg leading-8 font-semibold relative capitalize;
 }
 
 .shine {
