--- a/src/app/books/style.scss
+++ b/src/app/books/style.scss
@@ -1,5 +1,5 @@
 .book {
-    @apply grid lg:grid-cols-11 md:gap-6 my-20;
+    @apply grid lg:grid-cols-11 md:gap-6 md:my-20 sm:my-10 my-5;
 
     .c1 {
         @apply lg:col-span-8;
