--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,17 +37,6 @@ body {
   @apply absolute inset-0 rounded-md;
 }
 
-p {
-  white-space: normal !important;
-  font-size: 16px;
-  word-spacing: 2px; /* Adjust the value as needed */
-
-  color: #000;
-  line-height: 30px;
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-
 .title {
   display: flex;
   align-items: center;
@@ -106,7 +95,10 @@ p {
     @apply md:text-3xl text-2xl;
   }
   h3 {
-    @apply md:text-2xl text-xl;
+    @apply md:text-2xl text-xl t1 my-2;
+  }
+  p {
+    @apply my-1 text-lg text-justify font-normal text-gray-800 leading-relaxed;
   }
 }
 
