--- a/src/app/(quiz)/style.scss
+++ b/src/app/(quiz)/style.scss
@@ -1,22 +1,15 @@
-.book {
+.quiz {
     @apply grid lg:grid-cols-11 md:gap-6 md:my-20 sm:my-10 my-5;
 
     .c1 {
         @apply lg:col-span-8;
 
-        h2 {
-            @apply text-2xl font-semibold py-2;
-        }
-
-        ul {
-            @apply list-inside list-decimal;
+        ol {
+            @apply list-inside;
+            list-style-type: upper-alpha;
 
             li {
                 @apply my-2 py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
-
-                a {
-                    @apply underline text-green-600 hover:transition-all hover:no-underline;
-                }
             }
         }
     }
