--- a/src/app/books/style.scss
+++ b/src/app/books/style.scss
@@ -8,17 +8,17 @@
             @apply text-2xl font-semibold py-2;
         }
 
-        ul {
-            @apply list-inside list-decimal;
+        // ul {
+        //     @apply list-inside list-decimal;
 
-            li {
-                @apply my-2 py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
+        //     li {
+        //         @apply my-2 py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
 
-                a {
-                    @apply underline text-green-600 hover:transition-all hover:no-underline;
-                }
-            }
-        }
+        //         a {
+        //             @apply underline text-green-600 hover:transition-all hover:no-underline;
+        //         }
+        //     }
+        // }
     }
 
     .c2 {
