--- a/src/app/books/style.scss
+++ b/src/app/books/style.scss
@@ -15,7 +15,7 @@
                 @apply my-2 py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
 
                 a {
-                    @apply underline text-green-600 hover:transition-all hover:no-underline;
+                    @apply underline text-color2 hover:transition-all hover:no-underline;
                 }
             }
         }
