--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -232,31 +232,17 @@ button:focus {
 
 .title:before {
   content: "";
-  @apply bg1;
-  position: absolute;
-  right: 0;
+  @apply bg-color2 absolute right-0 w-full h-[2px];
   top: 50%;
-  height: 2px;
-  width: 100%;
   transform: translateY(-50%);
 }
 
 .overlay {
-  position: relative;
-  z-index: 0;
+  @apply relative z-0;
 }
 
 .overlay::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  content: "";
-  z-index: -1;
-  opacity: 0.9;
-  /* Adjust the opacity as needed */
-  @apply bg1;
+  @apply absolute top-0 left-0 bottom-0 right-0 opacity-90 -z-10 bg-color2;
 }
 
 
