--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -242,7 +242,10 @@ button:focus {
 }
 
 .overlay::after {
-  @apply absolute top-0 left-0 bottom-0 right-0 opacity-90 -z-10 bg-color2;
+  @apply absolute top-0 left-0 bottom-0 right-0 bg1;
+  content: "";
+  z-index: -1;
+  opacity: 0.9;
 }
 
 
