--- a/src/app/books/style.scss
+++ b/src/app/books/style.scss
@@ -9,11 +9,10 @@
         }
 
         ul {
-            @apply list-inside list-decimal;
+            @apply list-outside list-decimal;
 
             li {
-                @apply my-2 py-2 text-lg text-justify font-normal text-gray-800 leading-relaxed;
-
+                @apply my-2 py-2 pl-5 ml-4 text-lg text-justify font-normal text-gray-800 leading-relaxed;
                 a {
                     @apply underline text-color2 hover:transition-all hover:no-underline;
                 }
