--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -267,3 +267,18 @@ button:focus {
   background-position: top center;
   background-repeat: no-repeat;
 }
+
+
+
+
+.player-wrapper {
+  position: relative;
+}
+
+.player-wrapper .react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
