--- a/src/components/card2/card3Component.module.css
+++ b/src/components/card2/card3Component.module.css
@@ -1,11 +1,13 @@
 .card {
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.05), 0px 8px 15px rgba(0, 0, 0, 0.1),
+  box-shadow:
+    0px 3px 6px rgba(0, 0, 0, 0.05),
+    0px 8px 15px rgba(0, 0, 0, 0.1),
     0 0 0 1px rgba(255, 255, 255, 0.1);
   transition: box-shadow 0.25s;
   @apply bg-gray-900 cursor-pointer rounded-md relative pt-4 px-4 pb-4;
 }
 .card::before {
-  content: "";
+  content: '';
   background-color: rgba(255, 255, 255, 0.015);
   @apply absolute inset-0 rounded-md;
 }
@@ -22,6 +24,10 @@
   @apply text-white text-lg leading-8 font-semibold relative capitalize;
 }
 
+.li {  z-index: 2;
+  @apply !text-white text-base leading-8 font-normal relative capitalize;
+}
+
 .shine {
   border-radius: inherit;
   position: absolute;
@@ -32,7 +38,7 @@
   transition: opacity 0.5s;
 }
 .shine::before {
-  content: "";
+  content: '';
   width: 150%;
   padding-bottom: 150%;
   border-radius: 50%;
@@ -69,7 +75,7 @@
 }
 .line::before,
 .line::after {
-  content: "";
+  content: '';
   position: absolute;
   background-color: #2a2b2c;
   transition: transform 0.35s;
@@ -126,7 +132,9 @@
 }
 /* hover card */
 .card:hover {
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.04), 0px 15px 25px rgba(0, 0, 0, 0.3),
+  box-shadow:
+    0px 3px 6px rgba(0, 0, 0, 0.04),
+    0px 15px 25px rgba(0, 0, 0, 0.3),
     0 0 0 1px rgba(255, 255, 255, 0.2);
 }
 .card:hover .shine {
