--- a/src/styles/Wrapper/style.scss
+++ b/src/styles/Wrapper/style.scss
@@ -19,6 +19,10 @@
                 }
             }
         }
+
+        .links {
+            @apply underline text-green-600 hover:transition-all hover:no-underline;
+        }
     }
 
     .c2 {
