--- a/src/components/card/cardSmall/cardSmall.scss
+++ b/src/components/card/cardSmall/cardSmall.scss
@@ -19,7 +19,7 @@
       0 0 0 1px rgba(255, 255, 255, 0.2);
   }
 
-  h3 {
+  span {
     z-index: 2;
     margin: 12px 0 4px 0;
     @apply text-white text-lg leading-8 font-semibold relative;
