--- a/src/app/(main)/globals.scss
+++ b/src/app/(main)/globals.scss
@@ -76,21 +76,29 @@ button:focus {
 ------------------------- scrollbar start here --------------------
 ---------------------------------------------------------------- */
 
-/* width */
+/* Width of the scrollbar */
 ::-webkit-scrollbar {
-  @apply w-3 h-2;
+  @apply w-3 h-2 bg-gray-300;
 }
 
-/* Track */
+/* Track of the scrollbar */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  background-color: #dad6d698; /* Light gray background */
 }
 
-/* Handle */
+/* Handle of the scrollbar (thumb) */
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
+ @apply bg-color1;
 }
+
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background-color: #d00000; /* Darker red on hover */
+// }
+
 
 /* ---------------------------------------------------------------
 ------------- Tailwind CSS LAYER BASE Hero start here ------------
