updated: styling website 10/4/2024 8:07

--- a/src/app/(main)/globals.scss
+++ b/src/app/(main)/globals.scss
@@ -8,6 +8,13 @@
   --black: #000;
   --color1: #553CDF;
   --color2: #6b7385;
+  --card1: #FEF2CD;
+  --card2: #FFEEF1;
+  --card3: #FFE4FD;
+  --card4: #E6FFF5;
+  --card5: #F3D7FB; 
+  --card6: #f8eeda;
+
 }
 
 .dark {
